# Irminsul

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
backend/: Cargo.toml
backend/src/: config.rs  main.rs  mongo.rs
backend/src/admin/: errors.rs  mod.rs  model.rs  password.rs  repository.rs  token.rs
backend/src/admin/db/: mod.rs  schema.rs
backend/src/admin/dto/: audit.rs  auth.rs  content.rs  embedding.rs  invitations.rs  mod.rs  users.rs
backend/src/admin/entities/: audit_logs.rs  embedding_api_keys.rs  embedding_providers.rs  embedding_settings.rs  invitations.rs  mod.rs  sessions.rs  users.rs
backend/src/admin/middlewares/: auth.rs  csrf.rs  mod.rs  origin.rs
backend/src/admin/routers/: audit.rs  auth.rs  content.rs  embedding.rs  invitations.rs  mod.rs  settings.rs  users.rs
backend/src/admin/services/: audit.rs  auth.rs  bootstrap.rs  content.rs  embedding.rs  invitations.rs  mod.rs  rate_limit.rs  users.rs
backend/src/audit/: mod.rs  model.rs  service.rs
backend/src/audit/entities/: mod.rs
backend/src/catalog/: dto.rs  service.rs
backend/src/content/: mod.rs  model.rs
backend/src/content/db/: mod.rs  schema.rs
backend/src/content/dto/: content.rs
backend/src/content/services/: catalog.rs
backend/src/db/: mod.rs
backend/src/entities/: mod.rs  users.rs
backend/src/entities/characters/: alias.rs  i18n.rs  mod.rs
backend/src/entities/games/: alias.rs  i18n.rs  mod.rs
backend/src/games/: mod.rs
backend/src/games/hk4e/db/: mod.rs
backend/src/games/hk4e/db/entities/: characters.rs  game_info.rs  mod.rs
backend/src/games/hk4e/db/entities/elements/: elemental_reaction_elements.rs  elemental_reactions.rs  elements.rs  mod.rs
backend/src/games/hk4e/db/entities/weapons/: mod.rs  weapon_types.rs  weapons.rs
backend/src/models/: lang.rs
backend/src/routers/: admin.rs  api_routes.rs  hello.rs  mcp.rs  mod.rs
backend/src/vector/: jobs.rs  mod.rs  service.rs
docs/: sequence_diagram.md
panel/: package.json
panel/src/: App.tsx  index.css  index.html  index.ts
panel/src/layouts/: auth-layout.tsx  dashboard-layout.test.ts  dashboard-layout.tsx  protected-layout.tsx
panel/src/pages/: api-tester-page.test.ts  api-tester-page.tsx  login-page.tsx  not-found-page.tsx  overview-page.tsx  register-page.tsx  settings-page.tsx
panel/src/router/: nav-items.test.ts  nav-items.ts  routes.test.tsx  (+1 more)
plugins/template/: Cargo.toml
shared/: Cargo.toml
(+11 files in other folders)
