[package]
name = "backend"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
salvo = { version = "0.89.3", features = ["serve-static", "oapi", "logging", "affix-state", "proxy", "ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rust-embed = "8.11.0"
argon2 = "0.5.3"
rand = "0.8.5"
sha2 = "0.10.9"
hex = "0.4.3"
turso = "0.5.3"
aegis = { version = "0.9.8", features = ["pure-rust"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }


[[bin]]
name = "Irminsul"
path = "src/main.rs"
